tests/baselines/reference/objectCreationExpressionInFunctionParameter.errors.txt
==== tests/cases/compiler/objectCreationExpressionInFunctionParameter.ts (2 errors) ====
    class A {
        constructor(public a1: string) {
        }
    }
    function foo(x = new A(123)) { //should error, 123 is not string
                           ~~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    }}
     ~
!!! error TS1128: Declaration or statement expected.